--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+fontsheet
+
 ## User settings
 xcuserdata/
 
@@ -88,3 +90,9 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+Package.resolved
+*.xcworkspacedata
+.DS_Store
+tidy
+*.fnt
+fonts/
